--- a/inicio/index.html
+++ b/inicio/index.html
@@ -9,6 +9,8 @@
     <div class="welcome">
         <h1>¡Bienvenido, {{nombre}}!</h1>
         <p>Tu rol es: <strong>{{rol}}</strong></p>
+        <a class="btn" href="../crear_encuesta/crear.html">Crear encuesta</a>
+
         <a href="../logout/cerrar_sesion.php">Cerrar sesión</a>
     </div>
 </body>
