añadir opcion que redirija al inicio

--- a/login/login.html
+++ b/login/login.html
@@ -24,6 +24,8 @@
         </form>
         <div class="extra-links">
             <p><a href="../registro/registro.html">¿No tienes cuenta? Regístrate aquí</a></p>
+            <p><a href="../inicio/index.php">Ir al inicio</a></p>
+
         </div>
     </div>
 </body>
