--- a/inicio/index.html
+++ b/inicio/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <header>
-        <div class="logo">encuestas</div>
+        <div class="logo">Encuestas</div>
         <nav>
             {{navegacion}}
         </nav>
     </header>
 
     <main>
-        <h1>encuestas disponibles</h1>
+        <h1>Encuestas disponibles</h1>
         <div class="grid-encuestas">
             {{encuestas}}
         </div>
