--- a/ver_encuestas/ver_encuesta.html
+++ b/ver_encuestas/ver_encuesta.html
@@ -24,47 +24,78 @@
     </div>
 
     <script>
+        // sacamos el id de la encuesta desde la url
         const urlParams = new URLSearchParams(window.location.search);
-        const id = urlParams.get('id') || 1;
+        const id = urlParams.get('id');
 
-        fetch(`obtener_encuesta.php?id=${id}`)
+        let preguntasData = []; // guardamos estructura de preguntas para luego
+
+        // pedimos los datos al servidor
+        fetch(`ver_encuesta.php?id=${id}`)
             .then(res => res.json())
             .then(data => {
+                // si hay error, lo mostramos
                 if (data.error) {
                     alert(data.error);
                     return;
                 }
 
+                // pintamos el título y autor
                 document.getElementById("nombreAutor").textContent = data.autor;
                 document.getElementById("tituloEncuesta").textContent = data.titulo;
 
-                const container = document.getElementById("preguntas-container");
-                data.preguntas.forEach((pregunta, index) => {
-                    const divPregunta = document.createElement("div");
-                    divPregunta.classList.add("pregunta");
+                // contenedor de preguntas
+                const contenedor = document.getElementById("preguntas-container");
 
-                    const preguntaHTML = `
-                        <p><strong>Pregunta ${index + 1}:</strong> ${pregunta.texto}</p>
-                        <div class="respuestas">
-                            ${pregunta.respuestas.map(respuesta => `
+                preguntasData = data.preguntas;
+
+                // generamos preguntas + respuestas
+                preguntasData.forEach((pregunta, index) => {
+                    const div = document.createElement("div");
+                    div.classList.add("pregunta");
+
+                    let html = `<p><strong>pregunta ${index + 1}:</strong> ${pregunta.texto}</p><div class="respuestas">`;
+
+                    // CAMBIO: ahora usamos respuesta.id y respuesta.texto
+                    pregunta.respuestas.forEach(respuesta => {
+                        html += `
                                 <label>
-                                    <input type="radio" name="pregunta_${index}" value="${respuesta}" required>
-                                    ${respuesta}
-                                </label><br>
-                            `).join('')}
-                        </div>
-                    `;
+                                    <input type="radio" name="pregunta_${index}" value="${respuesta.id}" required>
+                                    ${respuesta.texto}
+                                </label><br>`;
+                    });
 
-                    divPregunta.innerHTML = preguntaHTML;
-                    container.appendChild(divPregunta);
+
+                    html += "</div>";
+                    div.innerHTML = html;
+                    contenedor.appendChild(div);
+                });
+
+                // manejamos el envío del formulario
+                document.getElementById("formEncuesta").addEventListener("submit", function (e) {
+                    e.preventDefault();
+
+
+                    // recogemos ids de respuestas seleccionadas
+                    const respuestas = preguntasData.map((_, index) => {
+                        const seleccionada = document.querySelector(`input[name="pregunta_${index}"]:checked`);
+                        return seleccionada ? parseInt(seleccionada.value) : null;
+                    });
+
+                    // enviamos al backend
+                    fetch("guardar_respuestas.php", {
+                        method: "POST",
+                        headers: {
+                            "Content-Type": "application/json"
+                        },
+                        body: JSON.stringify({ respuestas })
+                    })
+                        .then(() => {
+                            // redirigimos al inicio directamente sin mostrar alertas
+                            window.location.href = "../inicio/index.php";
+                        });
                 });
             });
-
-        document.getElementById("formEncuesta").addEventListener("submit", function (e) {
-            e.preventDefault();
-            alert("Gracias por completar la encuesta.");
-            // Dani aqui un fetch alomejor para enviar las respuestas y borras el alert
-        });
     </script>
 </body>
 
