habilitar nav de ver encuestas y estadisticas y solo poder responder un vez

--- a/ver_estadisticas/ver_estadisticas.html
+++ b/ver_estadisticas/ver_estadisticas.html
@@ -24,7 +24,7 @@
     <?php endif; ?>
 
     <div class="volver-container">
-        <a href="../inicio/index.php" class="volver-btn">← volver al inicio</a>
+        <a href="../inicio/index.php" class="volver-btn">← Volver al inicio</a>
     </div>
 </body>
 
