añadir la paginacion

--- a/inicio/index.html
+++ b/inicio/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>motor de encuestas</title>
+    <title>Motor de encuestas</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
 
     <main>
         <h1>Encuestas disponibles</h1>
-        <div class="grid-encuestas">
+        <div class="contenedor">
             {{encuestas}}
         </div>
     </main>
